# markdown-desk

./: .gitignore  .gitmodules  AGENTS.md  LICENSE  README.md  TODO.md  package-lock.json  package.json
.github/workflows/: release.yml  submodule-update.yml  test.yml
scripts/: bridge-helpers.js  bridge.js  bump.sh  prepare-frontend.sh  toc.js
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  default_app.rs  lib.rs  logger.rs  main.rs  menu.rs  watcher.rs
tests/e2e/: package-lock.json  package.json  wdio.conf.js
tests/e2e/fixtures/: README.md  sample-alpha.md  sample-beta.md  한글-메모.md
tests/e2e/helpers/: app-launcher.js  live-reload.js  session.js
tests/e2e/specs/: auto-refresh-cold-start.spec.js  auto-refresh.spec.js  find.spec.js  keyboard-shortcuts.spec.js  large-doc-render.spec.js  last-view-mode.spec.js  mermaid.spec.js  reset.spec.js  submodule-contract.spec.js  tab-context-menu.spec.js  tabs.spec.js  theme.spec.js  toc.spec.js  undo-after-livereload.spec.js  update-banner.spec.js  view-mode.spec.js  webview-zoom.spec.js
tests/unit/: bridge-helpers.test.mjs  submodule-contract.test.mjs  toc-helpers.test.mjs
