[package]
name = "markdown-desk"
version = "26.4.6"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "7"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-window-state = "2"
# Powers the e2e harness (TAURI_WEBDRIVER_PORT). Cargo does not support
# `[target.'cfg(debug_assertions)'.dependencies]` — that cfg key silently
# failed and the crate was linked in every build anyway. Declaring it as a
# regular dep keeps the existing behavior without the warning; the
# `#[cfg(debug_assertions)]` gate on `plugin(init())` in lib.rs is where
# the *runtime* inclusion actually works, so the webdriver server never
# binds to a port in release builds. The plugin's code may still leave
# some symbols in the release binary — if that ever matters we can gate
# it via an optional feature + `cfg(feature = ...)` instead. (Current
# release binary impact is bounded by LTO/strip in tauri.conf.json; check
# with `cargo bloat --release` before doing any further refactoring.)
tauri-plugin-webdriver = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"

[build-dependencies]
tauri-build = { version = "2", features = [] }
