[package]
name = "markdown-desk"
version = "26.5.1"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "7"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-window-state = "2"
# Powers the e2e harness (TAURI_WEBDRIVER_PORT). Cargo does not support
# `[target.'cfg(debug_assertions)'.dependencies]` — that cfg key silently
# failed and the crate was linked in every build anyway. Declared as a
# regular dep; the `#[cfg(debug_assertions)]` gate on `plugin(init())` in
# lib.rs is where runtime inclusion actually works, so the webdriver
# server never binds to a port in release builds.
#
# Verified on the v26.4.6 release build (LTO + strip from tauri.conf.json):
#   nm -U target/release/markdown-desk | grep -c webdriver         → 0
#   strings -a target/release/markdown-desk | grep -c webdriver    → 1
# The one string hit is a single occurrence inside Tauri's plugin ACL
# manifest blob — a few bytes of metadata, not executable code. No
# defined symbols, no standalone webdriver strings. If this ever
# regresses we can promote to an optional feature and enable it only on
# dev / e2e builds.
tauri-plugin-webdriver = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"

[build-dependencies]
tauri-build = { version = "2", features = [] }
